pbdBASE 0.1-1 (2012-12-1) ----------------------------------------------------

2012-11-30:
  * Created .pbdBASEEnv environment.
  * Changed functions to write to new env rather than .GlobalEnv.
  * Finished cleaning up lm.fit.
  * Made PBLAS/ScaLAPACK wrappers less stupid.

2012-11-21:
  * Fixed many problems with qr wrappers.

2012-11-01:
  * Fixed some nasty redistribution bugs.

2012-10-30:
  * Made lm.fit-related foreign language wrappers more efficient.

2012-10-26:
  * Significantly cleaned up all foreign language wrappers.

2012-10-23:
  * Cleaned up wrappers for singular value decomposition.

2012-10-22:
  * Distributed QR added.
  * Distributed linear least squares solver added for n>p case.

======================= Log Before Release =====================================
2012-10-02:
  * Prepare for the first submission.

2012-09-18:
  * Changed high order (re)distribution methods functionality.
  * Added demos.
  * Modify "PDLAPRNT" function.

2012-09-12:
  * Added insertion methods.

2012-09-11:
  * Remembered to do this.
  * Split 'pbdDMAC' into 'pbdBASE' and 'pbdDMAC'.

2012-08-21:
  * Delete configure.ac and use RmpiSPMD:::LdFlags() and others.
  * Rename to 'pbdDMAC'.

2012-08-13:
  * Link with RmpiSLAP.
  * Add guide, man pages, installation, ...

2012-07-xx:
  * Add BLACS, PBLAS, ScaLAPACK.