@@ -1,5 +1,3 @@
-//WCC: Header file for all C code called by .Call to wrap .Fortran.
-
 #ifndef __BASE_GLOBAL__
 #define __BASE_GLOBAL__
 
@@ -12,6 +10,10 @@
 #ifdef  __cplusplus
 extern "C" {
 #endif
+
+/* return 1 if x is 0, x otherwise */
+/* need this when alloc'ing work vectors for fortran */
+#define nonzero(x) (x?x:1)
 
 /* Functions in "mpi_blacs.f". */
 extern void F77_NAME(mpi_blacs_initialize)(int * nprow, int *npcol, int *ictxt,
