@@ -1,3 +1,6 @@
+2012-12-17:
+  * Fixed bug in SEXP wrappers of ScaLAPACK functions; passing 0-byte Ralloc'd vectors.
+
 pbdBASE 0.1-1 (2012-12-1) ----------------------------------------------------
 
 2012-11-30:
